--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "gulp-watch": "latest"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
+    "electron-settings": "^3.1.4",
     "jquery": "^3.3.1",
-    "parsley": "^0.1.0",
-    "electron-settings": "^3.1.4"
+    "parsley": "^0.1.0"
   }
 }
