--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "browser-sync": "latest",
     "concurrently": "^3.5.1",
     "electron": "~1.8.2",
-    "electron-packager": "^11.1.0",
-    "gulp": "latest",
+    "electron-packager": "^11.2.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "latest",
     "gulp-csso": "latest",
     "gulp-notify": "latest",
