--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "gulp-watch": "latest"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
     "electron-settings": "^3.1.4",
+    "hasha": "^5.2.0",
     "jquery": "^3.3.1",
     "parsley": "^0.1.0"
   }
